begining of protocol

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html>
 <head>
-<script type="text/javascript" src="js/header.js" ></script>
-<script type="text/javascript" src="js/runtime.js" ></script>
-<script type="text/javascript" src="_build/js/jsLib.js" ></script>
-<script type="text/javascript" src="js/spliceCallbacks.js" ></script>
-<script type="text/javascript" src="_build/main/main.js" ></script>
+
+<script type="text/javascript" src="KaSim.js" ></script>
 
 </head>
 <body>
